--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
   <!-- bootstrap -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
 
+  <script src="js/jquery.min.js"></script>
+<script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
+
 </head>
 
 <body>
@@ -35,8 +38,8 @@
     <header>
       <nav id="navheader" class="navbar navbar-toggleable-md navbar-light bg-faded">
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
+          <span class="navbar-toggler-icon"></span>
+        </button>
 
         <h2><strong><a class="navbar-brand ml-1 navbar-brand" href="index.php">Apporté demain</a></strong></h2>
 
@@ -66,12 +69,11 @@
     </header>
 
     <div id="header">
-      <h1>Apporté demain</h1>
       <br>
       <figure class="logoBus">
-        <img src="" alt="logo">
+        <img src="img/logo.png" alt="logo">
       </figure>
-      <i class="fa fa-chevron-down" aria-hidden="true"></i>
+      <i class="fa fa-chevron-down fa-4x" aria-hidden="true"></i>
     </div>
 
   </section>
@@ -80,23 +82,30 @@
 
   <!-- CARTE -->
   <section class="subPage page">
-    <h2>Au coin de votre rue</h2>
+    <h2 class="auCoin">Au coin de votre rue</h2>
 <div class="row">
   <div class="carte col-md-9">
 
-    <i class="fa fa-map-marker here" aria-hidden="true"></i>
-    <i class="fa fa-thumb-tack artisan1 artisan" aria-hidden="true">
-      <div class="card profil">
-        <figure class="">
-          <img src="" alt="">
+    <i class="fa fa-thumb-tack thumb-tack here" aria-hidden="true"></i>
+    <i class="fa fa-map-marker artisan1 artisan" aria-hidden="true">
+      <div class="card profil d-flex flex-row">
+        <figure class="col-md-5 artisanPhoto">
+          <img src="img/amelie.jpg" alt="">
         </figure>
-        <p>AAAAAAAH oui</p>
+
+        <div class="presentation ">
+          <h3>Amélie</h3>
+          <p>Elle est : <em>créatrice de bijoux</em> <br>
+            Elle aime sa région car <em>elle y vit depuis toujours, elle connait ses rues, ses parcs, son histoire... </em> <br>
+            Elle croit en <em>la valeur des choses bien faites.</em></p>
+            <a href="presentation_produit.html" class="btn btn-primary">Voir l'artisan</a>
+        </div>
       </div>
     </i>
-    <i class="fa fa-thumb-tack artisan2 artisan" aria-hidden="true"></i>
-    <i class="fa fa-thumb-tack artisan3 artisan" aria-hidden="true"></i>
-    <i class="fa fa-thumb-tack artisan4 artisan" aria-hidden="true"></i>
-    <i class="fa fa-thumb-tack artisan5 artisan" aria-hidden="true"></i>
+    <i class="fa fa-map-marker artisan2 artisan" aria-hidden="true"></i>
+    <i class="fa fa-map-marker artisan3 artisan pasBijoux" aria-hidden="true"></i>
+    <i class="fa fa-map-marker artisan4 artisan pasBijoux" aria-hidden="true"></i>
+    <i class="fa fa-map-marker artisan5 artisan" aria-hidden="true"></i>
 
     <iframe class""  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d80985.04301799936!2d2.9771203846049152!3d50.631155397446555!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c2d579b3256e11%3A0x40af13e81646360!2sLille!5e0!3m2!1sfr!2sfr!4v1508062174646"
     width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
@@ -105,70 +114,61 @@
   <div class="col-md-3 filtre">
     <ul>
       <li>
-        <div class="dropdown">
-          <span>Produit</span><br>
-          <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            -- Choisir --
-          </button>
-          <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-            <a class="dropdown-item" href="#">Action</a>
-            <a class="dropdown-item" href="#">Another action</a>
-            <a class="dropdown-item" href="#">Something else here</a>
-          </div>
-        </div>
+        <span>Produit</span><br>
+          <select class="custom-select" aria-labelledby="">
+            <option class="dropdown-item" >-- Choisir --</option>
+            <option class="dropdown-item bijoux" >Bijoux</option>
+            <option class="dropdown-item" href="#">Déco</option>
+            <option class="dropdown-item" href="#">Ammeublement</option>
+            <option class="dropdown-item" href="#">Verrerie</option>
+          </select>
+
       </li>
       <li>
-        <div class="dropdown">
-          <span>Artisant</span><br>
-          <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            -- Choisir --
-          </button>
-          <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-            <a class="dropdown-item" href="#">Action</a>
-            <a class="dropdown-item" href="#">Another action</a>
-            <a class="dropdown-item" href="#">Something else here</a>
-          </div>
-        </div>
+        <span>Artisant</span><br>
+          <select class="custom-select" aria-labelledby="">
+            <option class="dropdown-item" >-- Choisir --</option>
+            <option class="dropdown-item bijoux" >Bijoux</option>
+            <option class="dropdown-item" href="#">Déco</option>
+            <option class="dropdown-item" href="#">Ammeublement</option>
+            <option class="dropdown-item" href="#">Verrerie</option>
+          </select>
+
       </li>
       <li>
-        <div class="dropdown">
-          <span>Rayon en km</span><br>
-          <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            -- Choisir --
-          </button>
-          <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-            <a class="dropdown-item" href="#">Action</a>
-            <a class="dropdown-item" href="#">Another action</a>
-            <a class="dropdown-item" href="#">Something else here</a>
-          </div>
-        </div>
+        <span>Rayon en km</span><br>
+          <select class="custom-select" aria-labelledby="">
+            <option class="dropdown-item" >-- Choisir --</option>
+            <option class="dropdown-item bijoux" >Bijoux</option>
+            <option class="dropdown-item" href="#">Déco</option>
+            <option class="dropdown-item" href="#">Ammeublement</option>
+            <option class="dropdown-item" href="#">Verrerie</option>
+          </select>
+
       </li>
       <li>
-        <div class="dropdown">
-          <span>Produit</span><br>
-          <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            -- Choisir --
-          </button>
-          <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-            <a class="dropdown-item" href="#">Action</a>
-            <a class="dropdown-item" href="#">Another action</a>
-            <a class="dropdown-item" href="#">Something else here</a>
-          </div>
-        </div>
+        <span>Accessoire</span><br>
+          <select class="custom-select" aria-labelledby="">
+            <option class="dropdown-item" >-- Choisir --</option>
+            <option class="dropdown-item bijoux" >Bijoux</option>
+            <option class="dropdown-item" href="#">Déco</option>
+            <option class="dropdown-item" href="#">Ammeublement</option>
+            <option class="dropdown-item" href="#">Verrerie</option>
+          </select>
+
       </li>
       <li>
-        <div class="dropdown">
-          <span>Produit</span><br>
-          <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            -- Choisir --
-          </button>
-          <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-            <a class="dropdown-item" href="#">Action</a>
-            <a class="dropdown-item" href="#">Another action</a>
-            <a class="dropdown-item" href="#">Something else here</a>
-          </div>
-        </div>
+        <span>Attache</span><br>
+          <select class="custom-select" aria-labelledby="">
+            <option class="dropdown-item" >-- Choisir --</option>
+            <option class="dropdown-item bijoux" >Bijoux</option>
+            <option class="dropdown-item" href="#">Déco</option>
+            <option class="dropdown-item" href="#">Ammeublement</option>
+            <option class="dropdown-item" href="#">Verrerie</option>
+          </select>
+
       </li>
+
     </ul>
   </div>
 
@@ -179,8 +179,8 @@
 
 
   <script type="text/javascript">
-    $('.artisan').click(function(){
-      $(".profil").slideUp();
+    $(".bijoux").click(function(){
+      $(".pasBijoux").css("display","none");
     });
   </script>
   <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
