--- a/presentation_produit.html
+++ b/presentation_produit.html
@@ -8,11 +8,12 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<link rel="icon" href="favicon.ico">
+      	<link rel="icon" href="favicon.ico">
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
         <!-- Place favicon.ico in the root directory -->
 
         <!-- CSS -->
+       <link href="https://fonts.googleapis.com/css?family=Allura" rel="stylesheet">
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -28,6 +29,7 @@
       <header id="" style="color: black;" class="">
 a faire par rémi
       </header>
+
       <main id="pres_artisan">
         <div class="prez_artisan card text-center">
           <div class="card-header">
@@ -48,88 +50,134 @@ a faire par rémi
                     <li>se mêler de la vie des gens</li>
                   </ul>
                 </p>
-                <p>Elle est : <span></span></p>
-                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+                <blockquote>
+                  J'aime l'idée d'échanger avec les gens de ma région, ma ville, mon quartier. <br>
+                  'Apporté demain', c'est comme un marché local en ligne
+                </blockquote>
               </figcaption>
             </figure>
           </div>
           <div class="card-footer text-muted">
-            2 days ago
+           Dernière connexion : <em>Hier à 8h32</em>
           </div>
         </div>
 
-        <div class="">
-          <h3>Découvrez ses produits</h3>
+
+        <div class="produits">
+          <h3 class="card-title">Découvrez ses produits</h3>
           <div class="card-columns">
           <div class="card">
-            <img class="card-img-top" src="..." alt="Card image cap">
+            <img class="card-img-top" src="img/bracelet1.jpg" alt="">
             <div class="card-body">
-              <h4 class="card-title">Card title that wraps to a new line</h4>
-              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <h4 class="card-title">Bracelet nouvelle génération</h4>
+              <p class="card-text">Ce double bracelet en cuir rose avec fermoir cliquet. </p>
             </div>
+            <footer class="carte_prod">
+                <i class="fa fa-heart " aria-hidden="true"></i>
+                <a href="#">
+                  <i class="fa fa-shopping-basket " aria-hidden="true"></i>
+                </a>
+                <button type="button" name="button">Fiche produit</button>
+            </footer>
           </div>
-          <div class="card p-3">
-            <blockquote class="blockquote mb-0 card-body">
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-              <footer class="blockquote-footer">
-                <small class="text-muted">
-                  Someone famous in <cite title="Source Title">Source Title</cite>
-                </small>
-              </footer>
-            </blockquote>
-          </div>
+
           <div class="card">
-            <img class="card-img-top" src="..." alt="Card image cap">
+            <img src="img/bracelet2.jpg" alt="">
+            <h4 class="card-title">Bracelet qui rend belle !</h4>
+            <footer class="carte_prod">
+                <i class="fa fa-heart " aria-hidden="true"></i>
+                <a href="#">
+                  <i class="fa fa-shopping-basket " aria-hidden="true"></i>
+                </a>
+                <button type="button" name="button">Fiche produit</button>
+            </footer>
+          </div>
+
+          <div class="card">
+            <img class="card-img-top" src="img/bracelet3.jpg" alt="">
             <div class="card-body">
-              <h4 class="card-title">Card title</h4>
-              <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-              <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+              <h4 class="card-title">Bracelet Cuir</h4>
+              <p class="card-text">Ce double bracelet en cuir rose avec fermoir cliquet en argent 925/1000e est une pièce incontournable à ajouter à votre collection. </p>
             </div>
+            <footer class="carte_prod">
+                <i class="fa fa-heart " aria-hidden="true"></i>
+                <a href="#">
+                  <i class="fa fa-shopping-basket " aria-hidden="true"></i>
+                </a>
+                <button type="button" name="button">Fiche produit</button>
+            </footer>
           </div>
-          <div class="card bg-primary p-3 text-center">
-            <blockquote class="blockquote mb-0">
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat.</p>
-              <footer class="blockquote-footer">
-                <small>
-                  Someone famous in <cite title="Source Title">Source Title</cite>
-                </small>
-              </footer>
-            </blockquote>
+
+          <div class="card text-center">
+            <img src="img/bracelet7.jpg" alt="">
+            <h4 class="card-title">Bracelet qui rend belle !</h4>
+
+            <p class="card-text">Vous êtes moyenne ? et vous voulez cacher la misère ??? Mon bracelet fera l'affaire</p>
+            <footer class="carte_prod">
+                <i class="fa fa-heart " aria-hidden="true"></i>
+                <a href="#">
+                  <i class="fa fa-shopping-basket " aria-hidden="true"></i>
+                </a>
+                <button type="button" name="button">Fiche produit</button>
+            </footer>
           </div>
+
           <div class="card text-center">
             <div class="card-body">
-              <h4 class="card-title">Card title</h4>
-              <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-              <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+              <h4 class="card-title">Le bracelet qui change de couleur</h4>
+              <img src="img/bracelet4.jpg" alt="">
+              <p class="card-text">Nouveau bracelet blingbling wahouuu.</p>
             </div>
+            <footer class="carte_prod">
+              <i class="fa fa-heart " aria-hidden="true"></i>
+              <a href="#">
+                <i class="fa fa-shopping-basket " aria-hidden="true"></i>
+              </a>
+              <button type="button" name="button">Fiche produit</button>
+            </footer>
           </div>
-          <div class="card">
-            <img class="card-img" src="..." alt="Card image">
+
+
+          <div class="card text-right">
+            <h4 class="card-title">Le bracelet </h4>
+            <img src="img/bracelet6.jpg" alt="">
+            <footer class="carte_prod">
+                <i class="fa fa-heart " aria-hidden="true"></i>
+                <a href="#">
+                  <i class="fa fa-shopping-basket " aria-hidden="true"></i>
+                </a>
+                <button type="button" name="button">Fiche produit</button>
+            </footer>
           </div>
-          <div class="card p-3 text-right">
-            <blockquote class="blockquote mb-0">
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-              <footer class="blockquote-footer">
-                <small class="text-muted">
-                  Someone famous in <cite title="Source Title">Source Title</cite>
-                </small>
-              </footer>
-            </blockquote>
-          </div>
+
           <div class="card">
             <div class="card-body">
-              <h4 class="card-title">Card title</h4>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-              <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+              <h4 class="card-title">Bijou</h4>
+              <img src="img/bracelet5.jpg" alt="">
+              <p class="card-text">Le bracelet étincellant qui pique aux yeux. Qualité supérieure.</p>
             </div>
+            <footer class="carte_prod">
+              <i class="fa fa-heart " aria-hidden="true"></i>
+              <a href="#">
+                <i class="fa fa-shopping-basket " aria-hidden="true"></i>
+              </a>
+              <button type="button" name="button">Fiche produit</button>
+            </footer>
           </div>
+
           <div class="card">
             <div class="card-body">
-              <h4 class="card-title">Card title</h4>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-              <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+              <img src="img/bracelet8.jpg" alt="">
+              <h4 class="card-title">Collier de poignet</h4>
+              <p class="card-text">Pour rendre jalouse vos potes.</p>
             </div>
+            <footer class="carte_prod">
+                <i class="fa fa-heart " aria-hidden="true"></i>
+                <a href="#">
+                  <i class="fa fa-shopping-basket " aria-hidden="true"></i>
+                </a>
+                <button type="button" name="button">Fiche produit</button>
+            </footer>
           </div>
         </div>
       </main>
